@@ -4,7 +4,14 @@ import dev.andrybak.resoday.gui.MainGui;
 import dev.andrybak.resoday.settings.storage.CustomDataDirectory;
 import dev.dirs.ProjectDirectories;
 
+import javax.swing.JLabel;
+import javax.swing.JOptionPane;
+import javax.swing.JPanel;
+import javax.swing.JTextArea;
+import java.awt.BorderLayout;
 import java.io.IOException;
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -13,6 +20,10 @@ import java.util.Optional;
 public final class Resoday {
 
 	public static void main(String... args) {
+		Thread.setDefaultUncaughtExceptionHandler((thread, throwable) -> {
+			showCrashError(thread, throwable);
+			System.exit(1);
+		});
 		Path dataDir;
 		Path configDir;
 		if (args.length < 1) {
@@ -57,5 +68,27 @@ public final class Resoday {
 			dataDir = defaultDataDir;
 		}
 		return dataDir;
+	}
+
+	private static void showCrashError(Thread thread, Throwable t) {
+		JPanel message = new JPanel(new BorderLayout());
+		message.add(new JLabel("Uncaught exception: " + t.getMessage()), BorderLayout.NORTH);
+		{
+			JTextArea exceptionText = new JTextArea();
+			StringWriter sw = new StringWriter();
+			PrintWriter printWriter = new PrintWriter(sw);
+			printWriter.println("Uncaught exception in thread " + thread.getName());
+			printWriter.println(t.getMessage());
+			t.printStackTrace(printWriter);
+			exceptionText.setText(sw.toString());
+			message.add(exceptionText, BorderLayout.CENTER);
+		}
+		message.add(new JLabel(StringConstants.APP_NAME_GUI + " is going to close"), BorderLayout.SOUTH);
+		JOptionPane.showMessageDialog(
+			JOptionPane.getRootFrame(),
+			message,
+			"Crash",
+			JOptionPane.ERROR_MESSAGE
+		);
 	}
 }
